# server.js
@@ -2,6 +2,7 @@ import express from 'express';
 import path from 'path';
 import mysql from 'mysql';
 import bodyParser from 'body-parser';
+import axios from "axios";
 
 const app = express();
 app.use(bodyParser.json());
@@ -105,7 +106,12 @@ app.get('/products/:id', (req, res) => {
 });
 
 app.post('/users', (req, res) => {
-    // Получаем номер телефона из тела запроса
+    // Проверяем наличие данных в теле запроса
+    if (!req.body || !req.body.phoneNumber) {
+        res.status(400).json({ message: 'Неверный формат запроса' });
+        return;
+    }
+
     const userPhoneNumber = req.body.phoneNumber;
 
     connection.query('SELECT * FROM users WHERE phoneNumber = ?', [userPhoneNumber], (error, results) => {
@@ -115,15 +121,64 @@ app.post('/users', (req, res) => {
             return;
         }
         if (results.length === 0) {
-            res.status(404).json({ isValid: false, message: 'Вы с таким номером телефона не зарегистрированы' });
-            return;
+            // Если пользователь с таким номером телефона не найден, добавляем нового пользователя
+            const { cabinNumber, numberOfPeople, surName, firstName, middleName, phoneNumber } = req.body;
+            connection.query('INSERT INTO users (cabinNumber, numberOfPeople, surName, firstName, middleName, phoneNumber) VALUES (?, ?, ?, ?, ?, ?)', [cabinNumber, numberOfPeople, surName, firstName, middleName, phoneNumber], (error, results) => {
+                if (error) {
+                    console.error('Ошибка при выполнении запроса к базе данных:', error);
+                    res.status(500).json({ message: 'Вы с таким номером телефона не зарегистрированы' });
+                    return;
+                }
+                // Отправляем ответ об успешном добавлении пользователя
+                res.status(201).json({ message: 'Пользователь успешно добавлен', userId: results.insertId });
+            });
+        } else {
+            // Если пользователь с таким номером телефона уже существует, возвращаем соответствующий ответ
+            res.json({ isValid: true, message: 'Номер телефона найден в базе данных', user: results[0] });
         }
-        res.json({ isValid: true, message: 'Номер телефона найден в базе данных', user: results[0] });
     });
 });
+
 
 
 const port = 3000;
 app.listen(port, () => {
     console.log(`Сервер запущен на порту ${port}`);
 });
+
+
+
+// app.post('/users', (req, res) => {
+//     // Получаем номер телефона из тела запроса
+//     const userPhoneNumber = req.body.phoneNumber;
+//
+//     connection.query('SELECT * FROM users WHERE phoneNumber = ?', [userPhoneNumber], (error, results) => {
+//         if (error) {
+//             console.error('Ошибка при выполнении запроса к базе данных:', error);
+//             res.status(500).json({ message: 'Ошибка при получении пользователя' });
+//             return;
+//         }
+//         if (results.length === 0) {
+//             res.status(404).json({ isValid: false, message: 'Вы с таким номером телефона не зарегистрированы' });
+//             return;
+//         }
+//         res.json({ isValid: true, message: 'Номер телефона найден в базе данных', user: results[0] });
+//     });
+// });
+//
+// // Маршрут для добавления нового пользователя
+// app.post('/users', (req, res) => {
+//     // Получаем данные из тела запроса
+//     const { cabinNumber, numberOfPeople, surName, firstName, middleName, phoneNumber } = req.body;
+//
+//     // Выполняем запрос на добавление пользователя
+//     connection.query('INSERT INTO users (cabinNumber, numberOfPeople, surName, firstName, middleName, phoneNumber) VALUES (?, ?, ?, ?, ?, ?)', [cabinNumber, numberOfPeople, surName, firstName, middleName, phoneNumber], (error, results) => {
+//         if (error) {
+//             console.error('Ошибка при выполнении запроса к базе данных:', error);
+//             res.status(500).json({ message: 'Вы с таким номером телефона не зарегистрированы' });
+//             return;
+//         }
+//         // Отправляем ответ об успешном добавлении пользователя
+//         res.status(201).json({ message: 'Пользователь успешно добавлен', userId: results.insertId });
+//     });
+// });
